# nbkr_forex_rates_parser

./: .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
config/: database.py
models/: todos.py
routes/: route.py
schemas/: schema.py
utils/: parser.py
